# python_package

./: .gitignore  README.md  pyproject.toml
src/awesome_package/: __init__.py  module_A.py
src/dev_tools/: utils.py
tests/auto/: test_module_A.py
tests/manual/: test_module_B.py
